Increased test coverage
Removed all handled REQUIRES clause. Moved Pokemon.analyzeMoves to Move class. Moved Pokemon.analyze to PokeJar. Changed all Arrays.asList to List.of.